feat: Implementato 'catalogo' sull'endpoint `POST device_models`
creato un file json di esempio presente anche nella documentazione dell'API.
Per testare il funzionamento dell'API si può eseguire questo comando dopo aver avviato il server localmente
`curl -X POST -H "Content-Type: application/json" -d '@src/routes/api/example_device_model_creation.json' localhost:3000/api/device_models`
